Recipes from first two sessions

--- a/recepty/menu-2010-04-04.md
+++ b/recepty/menu-2010-04-04.md
@@ -4,12 +4,24 @@ title: Menu 4.4.2010
 
 ## Francouzské bulky z ambasády
 
+TKTK
+
 ## Olivová tapenáda
+
+TKTK
 
 ## Mušle
 
+TKTK
+
 ## Špenátové noky s tomatovou omáčkou a parmezánem se šalvějov m máslem
+
+TKTK
 
 ## Jehněčí tajin
 
+TKTK
+
 ## Krém karamel s parfémem kávy a citronu
+
+TKTK
