First two recipes from 4.4.2010

--- a/recepty/menu-2010-04-04.md
+++ b/recepty/menu-2010-04-04.md
@@ -4,11 +4,33 @@ title: Menu 4.4.2010
 
 ## Francouzské bulky z ambasády
 
-TKTK
+- **1 kg** hladké pšeničné mouky
+- **22 g** kvasnic
+- **22 g** soli
+- **580 g** vody
+
+#### Postup
+
+Vymíchat těsto. Nechat hodinu kynout. Nařezat na 50 g kousky udělat malé bulky a znovu nechat kynout 1 hodinu. Pak se sype moukou a na povrchu se rozřízne do "x". 210 °C minut s miskou vody, pak 5 minut
+bez vody.
 
 ## Olivová tapenáda
 
-TKTK
+- olivy
+- ančovičky nebo sardelová pasta
+- kapary
+- česnek
+- olivový olej
+
+#### Postup
+
+Olivy se vypeckují a rozmíchají s ančovičkami / sardelovou pastou, kapari, česnek, olivou olej. Vše se najemno naseká a rozmixuje. Hustá pasta vydrží v ledničce 1 měsíc.
+
+:::note Veganská verze
+
+Ančovičky nebo sardelovou pasta nahradit solí, přidat více kapary.
+
+:::
 
 ## Mušle
 
