--- a/recepty/menu-2010-04-04.md
+++ b/recepty/menu-2010-04-04.md
@@ -28,7 +28,7 @@ Olivy se vypeckují a rozmíchají s ančovičkami / sardelovou pastou, kap
 
 :::note Veganská verze
 
-Ančovičky nebo sardelovou pasta nahradit solí, přidat více kapary.
+Ančovičky nebo sardelovou pasta nahradit solí, přidat více kaparů.
 
 :::
 
