--- a/recepty/menu-2010-04-04.md
+++ b/recepty/menu-2010-04-04.md
@@ -34,16 +34,104 @@ Ančovičky nebo sardelovou pasta nahradit solí, přidat více kaparů.
 
 ## Mušle
 
-TKTK
+- mušle slávky
+- řapíkatý celer
+- cibule
+- chilli paprička
+- bílé víno
+- smetana 31%
+- olivový olej
+- hladkolistá petržel
+- mořská sůl
+- červený pepř
 
-## Špenátové noky s tomatovou omáčkou a parmezánem se šalvějov m máslem
+#### Postup
 
-TKTK
+Na olivovém oleji zesklovatět cibuli a celer v poměru 1:1. Přidat mušle, chilli a zalít bílým vínem. Přikrýt a nechat dusit cca 10 minut, protřepávat. Mušle přecedit a vyloupat.
+
+1 díl řapíkatého celeru zpěnit na oleji, zalít vývarem z mušlí, smetanou a vyšlehat s máslem.
+
+#### Servis
+
+Na talíř lžíci omáčky, lžíci mušlí, nasekanou petržel a dozdobit červeným pepřem.
+
+## Špenátové noky s tomatovou omáčkou a parmezánem se šalvějovým máslem
+
+4 porce
+
+### Noky
+
+- **60 g** cibule
+- **200 g** blanšírovaného špenátu
+- **2 pl** másla
+- **2** vejce
+- **50 ml** mléka
+- **30 g** sýra na kostky, feta nebo kvalitní tvrdý
+- **1 pl** mouky
+- **150 g** rohlíku na kostičky
+
+### Tomatová omáčka
+
+- oloupaná rajčata
+- **1 stroužek** česneku
+- vývar
+- muškátový ořech
+- parmezán, máslo
+- šalvěj
+
+#### Postup
+
+Nakrájenou cibuli a česnek opéct na másle. Spařený špenát rozmixovat s mlékem, muškátem, solí, pepřem a vejci. Vše smíchat se sýrem a kostičkami rohlíku a nechat 20 minut odpočinout v lednici.
+
+Tvarovat navhlčenými dlaněmi v noky nebo knedlíky. Vařit ve slané vodě 15 &ndash; 20 minut. Po uvaření dát do ledové vody zcela zchládnout. Před podáváním nahřát v páře.
+
+Přepustit máslo, smíchat s nasekanou šalvějí nebo bazalkou.
+
+Na olivovém oleji opéct cibuli a česnek, přidat loupaná rajčata, vývar a nechat vařit se solí, pepřem a bobkovým listem. Přepasírovat a dochutit bylinkovým máslem.
 
 ## Jehněčí tajin
 
-TKTK
+- jehněčí kýta, kostky
+- oloupaná rajčata
+- cibule
+- česnek
+- olivový olej
+- šafrán
+- mletá paprika
+- zázvor
+- kari
+- bobkový list
+- koriandrové semínko
+- čerstvý koriandr
+- vývar
+
+### Cous cous
+
+- cous cous
+- vývar
+- lilek, cuketa, cibule na kostičky
+- česnek
+- rajčatový protlak
+- sušená rajčata
+- olivy
+- koriand, máta
+
+#### Postup
+
+Kostky jehněčí kýty opéct na olivovém oleji, poté přidat cibuli, česnek, rajčata a zarestovat. Přidat šafrán, pepř, mletou papriku, zázvor, kari, koriandr, bobkový list a čerstvý koriandr. Zalít trochou vývaru a dusit do měkka v troubě pod poklicí. 250 °C 15 minut, pomalu nechat dojít na 140 °C.
+
+Cous cous zalít horkým vývarem v poměru 1:1 a pod poklicí nechat 20 minut, promíchat vidličkou. Postupně na oleji zprudka orestovat lilek, cuketu a cibuli tak aby nepustili šťávu. Poté orestovat česnek a protlak. Vše smíchat s cous cousem, dochutit solí, pepřem, sušenými rajčaty včetně oleje a olivami. Dochutit koriandrem a mátou.
 
 ## Krém karamel s parfémem kávy a citronu
+
+- **500 ml** mléka
+- **50 g** kávy
+- vanilkový lusk
+- **2** vejce
+- **4** žloutky
+- **125 g** cukru krupice
+- citronová šťáva
+
+#### Postup
 
 TKTK
