--- a/recepty/menu-2010-06-06.md
+++ b/recepty/menu-2010-06-06.md
@@ -4,31 +4,112 @@ title: Menu 6.6.2010
 
 ## Sezamovo-sojový dresink
 
-TKTK
+- **150 g** kvalitní sojovky
+- **200 g** kvalitního kečupu
+- **75 g** teriyaki omáčky
+- **50 g** sezamového oleje
+- **100 g** medu
+- **20 g** zázvoru
+- šalotka a česnek na kostičky
+
+#### Postup
+
+Všechny suroviny smíchat.
 
 ## Tapenáda z oliv a sušených rajčat
 
-TKTK
+- sušená rajčata
+- olivy
+- citronová šťáva
+- česnek
+- hladkolistá petržel
+- olivový olej
+
+#### Postup
+
+Všechny suroviny v množství dle chuti rozkutrovat.
 
 ## Gribiche
 
-TKTK
+Na 6 porcí
+
+- **4** žloutky uvařené natvrdo
+- **2** uvařené bílky, na kostičky
+- **25 cl** slunečnicového nebo arašídového oleje
+- **1 pl** bílého vinného octa
+- **30 g** najemno nasekaných kaparů
+- **30 g** nasekaných okurek cornichon
+- **1 pl** dijonské hořčice
+- **2 pl** nasekané hladkolisté petržele a pažitky
+- sůl, pepř
+
+#### Postup
+
+Žloutky s dijonskou hořčicí, solí a pepřem rozmíchat. Přilít ocet a pomalu přimíchat olej, jako na majonézu. Přidat kapary, okurky, bílky a bylinky. Dochutit.
 
 ## Salsa verde
 
-TKTK
-
-## Kořeněný jogurt
-
-TKTK
+- **4 pl** nasekané hladkolisté petržele
+- **2 pl** kyselé okurky
+- **1 pl** jarní cibulky
+- **1 stroužek** česneku
+- **1 čl** kapary
+- **1/2 čl** sardelek
+- **1 pl** bílý vinný ocet
+- **50 ml** slunečnicového oleje
+- **50 ml** olivového oleje
+- sůl, pepř
 
 ## Šafránový kuskus
 
-TKTK
+- celezorný bio cous cous
+- silný vývar
+- šafrán
+- paprika, lilek a cuketa na malé kostičky
+- česnek
+- ras el hanout
+- olivový olej
+- olivový olej
+- sůl, pepř
+- pinie
+- máta
+
+#### Postup
+
+Cous cous zalít vývarem se šafránem v poměru 1:1 a nechat přikryté. Na pánvi opéct kostičky cukety, lilku, papriky a česneku. Okořenit ras el haonut, solí a pepřem. Zakápnout olivovým olejem a přidat opečené pinie a nasekanou mátu. Před podáváním ještě přidat trochu máty.
+
+## Kořeněný jogurt
+
+- řecký jogurt
+- ras el hanout
+- madras kari
+- limetová šťáva
+- koriandr
+- máta
+- sůl, pepř
+
+#### Postup
+
+Jogurt ochutit limetou a kořením, přimíchat nasekané bylinka a dochutit solí a pepřem.
 
 ## Hummus s marinovanou cizrnou
 
-TKTK
+- **250 g** cizrny namočené přes noc
+- **150 ml** tahini
+- **1 pl** citronové šťávy
+- **1 stroužek** česneku
+- sůl
+- **1/2 pl** římského kmínu
+- **1/2 pl** papriky
+- **3 pl** olivého oleje
+- **1 pl** hladkolisté petržele nebo koriandru
+- **1/2** nasekané zelené nebo červené chilli papričky
+
+#### Postup
+
+Cizrnu uvařit a sbírat pěnu, cca 1,5 hodiny. Odložit zhruba 1/3 stranou. Rozmixovat s citronovou šťávou, tahini, solí a trochou česneku, případně povolit vývarem. Zbylou cizrnu marinovat s citronovou šťávou, olivovým olejem, paprikou, římským kmínem, chilli papričkou a petrželkou.
+
+Na talíř rozložit humus, posypat marinovanou cizrnou a nasekanou petrželkou.
 
 ## Grilovaná zelenina
 
@@ -36,15 +117,57 @@ TKTK
 
 ## Polévka Gaspacho z pečené zeleniny
 
-TKTK
+- rajčata
+- papriky
+- česnek
+- salátová cibule
+- okurek
+- vývar
+- chilli paprička
+- olivový olej
+- sůl, pepř
+- bazalka
+
+#### Postup
+
+Rajčata a česnek rozkrojit na půl, spolu s celýma paprikama dát na pečící papír, pokapat olivovým olejem, posolit a dát péct na 200 °C. Nechat zapařit, sloupat slupky a dát do mixeru. Přidat okurky, salátovou cibuli a olivový olej. Rozmixovat, dochutit solí, pepřem a nasekanou chilli papričkou.
+
+Nechat vychladit, servírovat s bazalkou.
 
 ## Salát Waldorf
 
-TKTK
+- **250 g** celeru
+- **150 g** jablek nebo hrušek
+- **50 g** vlašských ořechů
+- **150 g** majonézy
+- **50 ml** kysané smetany
+- šťáva z 1/4 citronu
+- sůl
+- červený a bílý pepř
+- **50 ml** olivového oleje
+- řeřicha
+- hladkolistá petržel
 
-## Carpaccio z rajčat s kapari a fetou
+#### Postup
 
-TKTK
+Celer nakrájet na julien a balnšírovat cca 3 minuty. Jablka nebo hrušky nakrájet na julien, přidat celer a smíchat všechny ostatní suroviny.
+
+## Carpaccio z rajčat s kapary a fetou
+
+- rajčata
+- salátová cibule
+- kapary
+- feta
+- bazalka
+- hrubozrná sůl
+- pepř
+- olivový olej
+- bílý vinný ocet
+- lžička vývaru
+
+#### Postup
+
+Rajčata nakrájet na tenké plátky a rozložit na talíř. Nahoru dát velmi tenká kolečka cibulky. Osolit hrubou solí a posypat kapary. Opepřit černým pepřem. Poskládat lístky bazalky. Zakapat vinagretem z octa, olivového oleje a vývaru. Posypat fetou.
 
 ## Tzatziky
 
